...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvGoals"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    tools:itemCount="3"
...
