...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.565" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/log_in"
        android:textAllCaps="false"
...
